# TMRRasyon

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  nginx.conf
.claude/: launch.json
backend/: Dockerfile  fly.toml  pyproject.toml  railway.toml  seed_db.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/: animals.py  ingredients.py  rations.py
backend/app/core/: optimizer.py  reports.py
backend/app/core/nrc2023/: beef_requirements.py  dairy_requirements.py  formulas.py
backend/seed/: ingredients_nrc2023.json
backend/tests/: test_nrc2023.py
frontend/: package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/animals/: page.tsx
frontend/app/animals/[id]/: page.tsx
frontend/app/animals/new/: page.tsx
frontend/app/ingredients/: page.tsx
frontend/app/ingredients/prices/: page.tsx
frontend/app/rations/: page.tsx
frontend/app/rations/[id]/: page.tsx
frontend/app/rations/compare/: page.tsx
frontend/app/rations/new/: page.tsx
frontend/components/: AnimalForm.tsx  Sidebar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  index.ts  page-header.tsx
frontend/lib/: api.ts
